Continued externalizing messages

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -25,3 +25,39 @@ directorychooser.title=Please choose a directory
 CreationModalPreparation.sipFormat=SIP format
 cancel=Cancel
 start=Start
+CreationModalProcessing.currentSip=Current SIP\:
+CreationModalProcessing.action=Action\:
+close=Close
+CreationModalProcessing.errors=\ errors
+SimpleSipCreator.creatingStructure=Creating the SIP's directory structure
+SimpleSipCreator.copyingData=Copying the SIP's data
+SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
+SimpleSipCreator.finalizingSip=Finalizing the SIP
+InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
+content=Content
+ignore=Ignore
+InspectionPane.flatten=Flatten directory
+InspectionPane.skip=Skip Directory
+InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
+RuleModalPane.chooseFile=Choose File...
+RuleModalPane.chooseDirectory=Choose Directory...
+continue=Continue
+confirm=Confirm
+back=Back
+RuleCell.createdItem=Created %d item
+remove=Remove
+collapse=Collapse
+expand=Expand
+directory=\ directory
+directories=\ directories
+file=\ file
+files=\ files
+LoadingPane.createAssociation=Create association to
+RuleModalPane.associationMethod=Choose the association method
+RuleModalPane.maxDepth=Max depth
+RuleModalPane.metadataMethod=Choose the metadata method
+RuleModalProcessing.createdPreviews=Created %d SIP previews
+RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
+RuleModalProcessing.creatingPreviewa=Creating SIP previews
+RuleModalRemoving.title=Removing SIPs
+RuleModalRemoving.removedFormat=Removed %d SIPs (%d%%)
