--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -2,6 +2,13 @@ CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
 CreationModalPreparation.sipFormat=SIP format
+CreationModalProcessing.action=Action\:
+CreationModalProcessing.currentSip=Current SIP\:
+CreationModalProcessing.errors=\ errors
+InspectionPane.flatten=Flatten directory
+InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
+InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
+InspectionPane.skip=Skip Directory
 Main.errorLogo=Error reading logo file
 Main.exportCS=Export classification scheme
 Main.exportSips=Export SIPs
@@ -15,8 +22,37 @@ Main.showFiles=Show files
 Main.showIgnored=Show Ignored
 Main.showMapped=Show Mapped
 Main.useJava8=Java version is %s. Please use at least \\"Java 1.8\\".
+RuleModalPane.chooseDirectory=Choose Directory...
+RuleModalPane.chooseFile=Choose File...
+SimpleSipCreator.copyingData=Copying the SIP's data
+SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
+SimpleSipCreator.creatingStructure=Creating the SIP's directory structure
+SimpleSipCreator.finalizingSip=Finalizing the SIP
 appProperties.properties.error=Error while loading properties
+back=Back
 cancel=Cancel
+close=Close
+confirm=Confirm
+content=Content
+continue=Continue
 directorychooser.title=Please choose a directory
 filechooser.title=Please choose a file
+ignore=Ignore
 start=Start
+RuleCell.createdItem=Created %d item
+remove=Remove
+collapse=Collapse
+expand=Expand
+directory=\ directory
+directories=\ directories
+file=\ file
+files=\ files
+LoadingPane.createAssociation=Create association to
+RuleModalPane.associationMethod=Choose the association method
+RuleModalPane.maxDepth=Max depth
+RuleModalPane.metadataMethod=Choose the metadata method
+RuleModalProcessing.createdPreviews=Created %d SIP previews
+RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
+RuleModalProcessing.creatingPreviewa=Creating SIP previews
+RuleModalRemoving.title=Removing SIPs
+RuleModalRemoving.removedFormat=Removed %d SIPs (%d%%)
