Finished externalizing messages

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -61,3 +61,17 @@ RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
 RuleModalProcessing.creatingPreviewa=Creating SIP previews
 RuleModalRemoving.title=Removing SIPs
 RuleModalRemoving.removedFormat=Removed %d SIPs (%d%%)
+SchemaNode.items.format=%s  (%d items)
+SchemaNode.items.formatSimple=\  (%d items)
+SchemaPane.title=Classification Scheme
+SchemaPane.help.title=Load your\nclassification scheme
+associate=Associate
+SchemaPane.remove=Remove level
+SchemaPane.add=Add level
+SchemaPane.newNode=New node
+SourceTreeLoading.title=Loading...
+SourceTreeLoadMore.title=Load More ...
+FileExplorerPane.title=Source File Explorer
+FileExplorerPane.help.title=Choose your\nworking directory
+FileExplorerPane.chooseDir=Choose directory
+SourceTreeCell.remove=Remove Ignore
