Translated messages. Fixes #6

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -1,77 +1,90 @@
-Main.errorLogo=Error reading logo file
-Main.useJava8=Java version is %s. Please use at least \\"Java 1.8\\".
-Main.file=File
-Main.edit=Edit
-Main.view=View
-Main.openFolder=Open folder
-
-appProperties.properties.error=Error while loading properties
-Main.loadCS=Load classification scheme
-Main.exportCS=Export classification scheme
+associate=Associate
+back=Back
+cancel=Cancel
+close=Close
+collapse=Collapse
+confirm=Confirm
+content=Content
+continue=Continue
+directories=\ directories
+directory=\ directory
+directorychooser.title=Please choose a directory
+expand=Expand
+file=\ file
 filechooser.title=Please choose a file
-Main.exportSips=Export SIPs
-Main.quit=Quit
-Main.ignoreItems=Ignore item(s)
-Main.hideFiles=Hide Files
-Main.showFiles=Show files
-Main.showIgnored=Show Ignored
-Main.hideIgnored=Hide ignored
-Main.showMapped=Show Mapped
-Main.hideMapped=Hide mapped
+files=\ files
+ignore=Ignore
+load=Load
+remove=Remove
+start=Start
+
+CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
-CreationModalPreparation.choose=Choose...
-directorychooser.title=Please choose a directory
 CreationModalPreparation.sipFormat=SIP format
-cancel=Cancel
-start=Start
-CreationModalProcessing.currentSip=Current SIP\:
 CreationModalProcessing.action=Action\:
-close=Close
+CreationModalProcessing.currentSip=Current SIP\:
 CreationModalProcessing.errors=\ errors
-SimpleSipCreator.creatingStructure=Creating the SIP's directory structure
-SimpleSipCreator.copyingData=Copying the SIP's data
-SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
-SimpleSipCreator.finalizingSip=Finalizing the SIP
-InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
-content=Content
-ignore=Ignore
+
+FileExplorerPane.chooseDir=Choose directory
+FileExplorerPane.help.title=Choose your\nworking directory
+FileExplorerPane.title=Source File Explorer
+
 InspectionPane.flatten=Flatten directory
-InspectionPane.skip=Skip Directory
 InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
-RuleModalPane.chooseFile=Choose File...
-RuleModalPane.chooseDirectory=Choose Directory...
-continue=Continue
-confirm=Confirm
-back=Back
-RuleCell.createdItem=Created %d item
-remove=Remove
-collapse=Collapse
-expand=Expand
-directory=\ directory
-directories=\ directories
-file=\ file
-files=\ files
+InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
+InspectionPane.skip=Skip Directory
+InspectionPane.metadata=Metadata
+InspectionPane.rules=Rules
+
 LoadingPane.createAssociation=Create association to
+
+Main.edit=Edit
+Main.exportCS=Export classification scheme
+Main.exportSips=Export SIPs
+Main.file=File
+Main.hideFiles=Hide Files
+Main.hideIgnored=Hide ignored
+Main.hideMapped=Hide mapped
+Main.ignoreItems=Ignore item(s)
+Main.loadCS=Load classification scheme
+Main.openFolder=Open folder
+Main.quit=Quit
+Main.showFiles=Show files
+Main.showIgnored=Show Ignored
+Main.showMapped=Show Mapped
+Main.useJava8=Java version is %s. Please use at least \\"Java 1.8\\".
+Main.view=View
+
+RuleCell.createdItem=Created %d item
+
 RuleModalPane.associationMethod=Choose the association method
+RuleModalPane.chooseDirectory=Choose Directory...
+RuleModalPane.chooseFile=Choose File...
 RuleModalPane.maxDepth=Max depth
 RuleModalPane.metadataMethod=Choose the metadata method
 RuleModalProcessing.createdPreviews=Created %d SIP previews
-RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
 RuleModalProcessing.creatingPreviewa=Creating SIP previews
-RuleModalRemoving.title=Removing SIPs
+RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
 RuleModalRemoving.removedFormat=Removed %d SIPs (%d%%)
+RuleModalRemoving.title=Removing SIPs
+
 SchemaNode.items.format=%s  (%d items)
 SchemaNode.items.formatSimple=\  (%d items)
-SchemaPane.title=Classification Scheme
-SchemaPane.help.title=Load your\nclassification scheme
-associate=Associate
-SchemaPane.remove=Remove level
 SchemaPane.add=Add level
+SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
+SchemaPane.remove=Remove level
+SchemaPane.title=Classification Scheme
+SchemaPane.create=create
+SchemaPane.or=or
+
+SimpleSipCreator.copyingData=Copying the SIP's data
+SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
+SimpleSipCreator.creatingStructure=Creating the SIP's directory structure
+SimpleSipCreator.finalizingSip=Finalizing the SIP
+
+SourceTreeCell.remove=Remove Ignore
 SourceTreeLoading.title=Loading...
 SourceTreeLoadMore.title=Load More ...
-FileExplorerPane.title=Source File Explorer
-FileExplorerPane.help.title=Choose your\nworking directory
-FileExplorerPane.chooseDir=Choose directory
-SourceTreeCell.remove=Remove Ignore
+
