--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -1,72 +1,92 @@
-CreationModalPreparation.choose=Choose...
-CreationModalPreparation.creatingSips=Creating SIPs
-CreationModalPreparation.outputDirectory=Output directory
-CreationModalPreparation.sipFormat=SIP format
-CreationModalProcessing.action=Action\:
-CreationModalProcessing.currentSip=Current SIP\:
-CreationModalProcessing.errors=\ errors
-InspectionPane.flatten=Flatten directory
-InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a rule
-InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
-InspectionPane.skip=Skip Directory
-Main.errorLogo=Error reading logo file
-Main.exportCS=Export classification scheme
-Main.exportSips=Export SIPs
-Main.hideFiles=Hide Files
-Main.hideIgnored=Hide ignored
-Main.hideMapped=Hide mapped
-Main.ignoreItems=Ignore item(s)
-Main.loadCS=Load classification scheme
-Main.quit=Quit
-Main.showFiles=Show files
-Main.showIgnored=Show Ignored
-Main.showMapped=Show Mapped
-Main.useJava8=Java version is %s. Please use at least \\"Java 1.8\\".
-RuleModalPane.chooseDirectory=Choose Directory...
-RuleModalPane.chooseFile=Choose File...
-SimpleSipCreator.copyingData=Copying the SIP's data
-SimpleSipCreator.copyingMetadata=Copying the SIP's metadata
-SimpleSipCreator.creatingStructure=Creating the SIP's directory structure
-SimpleSipCreator.finalizingSip=Finalizing the SIP
-appProperties.properties.error=Error while loading properties
-back=Back
-cancel=Cancel
-close=Close
-confirm=Confirm
-content=Content
-continue=Continue
-directorychooser.title=Please choose a directory
-filechooser.title=Please choose a file
-ignore=Ignore
-start=Start
-RuleCell.createdItem=Created %d item
-remove=Remove
-collapse=Collapse
-expand=Expand
-directory=\ directory
-directories=\ directories
-file=\ file
-files=\ files
-LoadingPane.createAssociation=Create association to
-RuleModalPane.associationMethod=Choose the association method
-RuleModalPane.maxDepth=Max depth
-RuleModalPane.metadataMethod=Choose the metadata method
-RuleModalProcessing.createdPreviews=Created %d SIP previews
-RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
-RuleModalProcessing.creatingPreviewa=Creating SIP previews
-RuleModalRemoving.title=Removing SIPs
-RuleModalRemoving.removedFormat=Removed %d SIPs (%d%%)
-SchemaNode.items.format=%s  (%d items)
-SchemaNode.items.formatSimple=\  (%d items)
-SchemaPane.title=Classification Scheme
-SchemaPane.help.title=Load your\nclassification scheme
-associate=Associate
-SchemaPane.remove=Remove level
-SchemaPane.add=Add level
-SchemaPane.newNode=New node
-SourceTreeLoading.title=Loading...
-SourceTreeLoadMore.title=Load More ...
-FileExplorerPane.title=Source File Explorer
-FileExplorerPane.help.title=Choose your\nworking directory
-FileExplorerPane.chooseDir=Choose directory
-SourceTreeCell.remove=Remove Ignore
+associate=Associar
+back=Voltar
+cancel=Cancelar
+close=Fechar
+collapse=Ocultar
+confirm=Confirmar
+content=Conteúdo
+continue=Continuar
+directories=\ pastas
+directory=\ pasta
+directorychooser.title=Escolha uma pasta
+expand=Expandir
+file=\ ficheiro
+filechooser.title=Escolha um ficheiro
+files=\ ficheiros
+ignore=Ignorar
+load=Carregar
+remove=Remover
+start=Começar
+
+CreationModalPreparation.choose=Escolher...
+CreationModalPreparation.creatingSips=A criar SIPs
+CreationModalPreparation.outputDirectory=Pasta de saída
+CreationModalPreparation.sipFormat=Formato do SIP
+CreationModalProcessing.action=Ação\:
+CreationModalProcessing.currentSip=SIP atual\:
+CreationModalProcessing.errors=\ erros
+
+FileExplorerPane.chooseDir=Escolher
+FileExplorerPane.help.title=Escolha a sua\npasta de trabalho
+FileExplorerPane.title=Explorador de ficheiros
+
+InspectionPane.flatten=Nivelar pasta
+InspectionPane.help.ruleList=Associe ficheiros/pastas \na um description object \npara criar uma regra
+InspectionPane.help.title=Escolha um item \ndo esquema de classificação\npara o inspecionar
+InspectionPane.skip=Saltar pasta
+InspectionPane.metadata=Metadados
+InspectionPane.rules=Regras
+
+LoadingPane.createAssociation=Criar associação a
+
+Main.edit=Editar
+Main.exportCS=Exportar esquema de classificação
+Main.exportSips=Exportar SIPs
+Main.file=Ficheiro
+Main.hideFiles=Esconder ficheiros
+Main.hideIgnored=Esconder ignorados
+Main.hideMapped=Esconder mapeados
+Main.ignoreItems=Ignorar itens
+Main.loadCS=Carregar esquema de classificação
+Main.openFolder=Abrir pasta
+Main.quit=Sair
+Main.showFiles=Mostrar ficheiros
+Main.showIgnored=Mostrar ignorados
+Main.showMapped=Mostrar mapeados
+Main.useJava8=A versão do Java é %s. Use pelo menos \\"Java 1.8\\".
+Main.view=Ver
+
+RuleCell.createdItem=Criado %d item
+
+RuleModalPane.associationMethod=Escolher o método de associação
+RuleModalPane.chooseDirectory=Escolher pasta...
+RuleModalPane.chooseFile=Escolher ficheiro...
+RuleModalPane.maxDepth=Profundidade máxima
+RuleModalPane.metadataMethod=Escolher o método de metadados
+RuleModalProcessing.createdPreviews=Criado %d pré-visualizações de SIP
+RuleModalProcessing.creatingPreviewa=A criar pré-visualizações de SIP
+RuleModalProcessing.processedDirsFiles=Processadas %d pastas e %d ficheiros
+RuleModalRemoving.removedFormat=Removidos %d SIPs (%d%%)
+RuleModalRemoving.title=A remover SIPs
+
+SchemaNode.items.format=%s  (%d itens)
+SchemaNode.items.formatSimple=\  (%d itens)
+
+SchemaPane.add=Adicionar nível
+SchemaPane.help.title=Carregue o\nesquema de classificação
+SchemaPane.newNode=Novo nodo
+SchemaPane.remove=Remover nível
+SchemaPane.title=Esquema de classificação
+SchemaPane.create=crie
+SchemaPane.or=ou
+
+SimpleSipCreator.copyingData=A copiar os dados do SIP
+SimpleSipCreator.copyingMetadata=A copiar os metadados do SIP
+SimpleSipCreator.creatingStructure=A criar a estrutura de pastas do SIP
+SimpleSipCreator.finalizingSip=Finalizando o SIP
+
+SourceTreeCell.remove=Remover ignorado
+SourceTreeLoading.title=A carregar...
+SourceTreeLoadMore.title=Carregar mais ...
+
+
