Improved configs. Metadata templates and configs are copied to the home of the user and can be changed

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -88,3 +88,28 @@ SourceTreeCell.remove=Remove Ignore
 SourceTreeLoading.title=Loading...
 SourceTreeLoadMore.title=Load More...
 
+association.singleSip.title = One description item for all selected files or folders
+association.singleSip.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+association.sipSelection.title = One description item for each selected files or folders
+association.sipSelection.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+association.sipPerFile.title = One description item for each file under the selected folder(s)
+association.sipPerFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+association.sipPerFolder.title = One description item for each folder under the selected folder(s)
+association.sipPerFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.singleFile.title = Load from a single file
+metadata.singleFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.sameFolder.title = Load from the directory
+metadata.sameFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.diffFolder.title = Load from another directory
+metadata.diffFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.template.title = Create new metadata from a template
+metadata.template.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+
