--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -4,7 +4,7 @@ cancel=Cancelar
 close=Fechar
 collapse=Ocultar
 confirm=Confirmar
-content=Conteúdo
+content=Conteï¿½do
 continue=Continuar
 directories=\ pastas
 directory=\ pasta
@@ -16,13 +16,13 @@ files=\ ficheiros
 ignore=Ignorar
 load=Carregar
 remove=Remover
-start=Começar
+start=Comeï¿½ar
 
 CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar SIPs
-CreationModalPreparation.outputDirectory=Pasta de saída
+CreationModalPreparation.outputDirectory=Pasta de saï¿½da
 CreationModalPreparation.sipFormat=Formato do SIP
-CreationModalProcessing.action=Ação\:
+CreationModalProcessing.action=Aï¿½ï¿½o\:
 CreationModalProcessing.currentSip=SIP atual\:
 CreationModalProcessing.errors=\ erros
 
@@ -32,39 +32,39 @@ FileExplorerPane.title=Explorador de ficheiros
 
 InspectionPane.flatten=Nivelar pasta
 InspectionPane.help.ruleList=Associe ficheiros/pastas \na um description object \npara criar uma regra
-InspectionPane.help.title=Escolha um item \ndo esquema de classificação\npara o inspecionar
+InspectionPane.help.title=Escolha um item \ndo esquema de classificaï¿½ï¿½o\npara o inspecionar
 InspectionPane.skip=Saltar pasta
 InspectionPane.metadata=Metadados
 InspectionPane.rules=Regras
 
-LoadingPane.createAssociation=Criar associação a
+LoadingPane.createAssociation=Criar associaï¿½ï¿½o a
 
 Main.edit=Editar
-Main.exportCS=Exportar esquema de classificação
+Main.exportCS=Exportar esquema de classificaï¿½ï¿½o
 Main.exportSips=Exportar SIPs
 Main.file=Ficheiro
 Main.hideFiles=Esconder ficheiros
 Main.hideIgnored=Esconder ignorados
 Main.hideMapped=Esconder mapeados
 Main.ignoreItems=Ignorar itens
-Main.loadCS=Carregar esquema de classificação
+Main.loadCS=Carregar esquema de classificaï¿½ï¿½o
 Main.openFolder=Abrir pasta
 Main.quit=Sair
 Main.showFiles=Mostrar ficheiros
 Main.showIgnored=Mostrar ignorados
 Main.showMapped=Mostrar mapeados
-Main.useJava8=A versão do Java é %s. Use pelo menos \\"Java 1.8\\".
+Main.useJava8=A versï¿½o do Java ï¿½ %s. Use pelo menos \\"Java 1.8\\".
 Main.view=Ver
 
 RuleCell.createdItem=Criado %d item
 
-RuleModalPane.associationMethod=Escolher o método de associação
+RuleModalPane.associationMethod=Escolher o mï¿½todo de associaï¿½ï¿½o
 RuleModalPane.chooseDirectory=Escolher pasta...
 RuleModalPane.chooseFile=Escolher ficheiro...
-RuleModalPane.maxDepth=Profundidade máxima
-RuleModalPane.metadataMethod=Escolher o método de metadados
-RuleModalProcessing.createdPreviews=Criado %d pré-visualizações de SIP
-RuleModalProcessing.creatingPreviewa=A criar pré-visualizações de SIP
+RuleModalPane.maxDepth=Profundidade mï¿½xima
+RuleModalPane.metadataMethod=Escolher o mï¿½todo de metadados
+RuleModalProcessing.createdPreviews=Criado %d prï¿½-visualizaï¿½ï¿½es de SIP
+RuleModalProcessing.creatingPreviewa=A criar prï¿½-visualizaï¿½ï¿½es de SIP
 RuleModalProcessing.processedDirsFiles=Processadas %d pastas e %d ficheiros
 RuleModalRemoving.removedFormat=Removidos %d SIPs (%d%%)
 RuleModalRemoving.title=A remover SIPs
@@ -72,11 +72,11 @@ RuleModalRemoving.title=A remover SIPs
 SchemaNode.items.format=%s  (%d itens)
 SchemaNode.items.formatSimple=\  (%d itens)
 
-SchemaPane.add=Adicionar nível
-SchemaPane.help.title=Carregue o\nesquema de classificação
+SchemaPane.add=Adicionar nï¿½vel
+SchemaPane.help.title=Carregue o\nesquema de classificaï¿½ï¿½o
 SchemaPane.newNode=Novo nodo
-SchemaPane.remove=Remover nível
-SchemaPane.title=Esquema de classificação
+SchemaPane.remove=Remover nï¿½vel
+SchemaPane.title=Esquema de classificaï¿½ï¿½o
 SchemaPane.create=crie
 SchemaPane.or=ou
 
@@ -87,6 +87,31 @@ SimpleSipCreator.finalizingSip=Finalizando o SIP
 
 SourceTreeCell.remove=Remover ignorado
 SourceTreeLoading.title=A carregar...
-SourceTreeLoadMore.title=Carregar mais ...
+SourceTreeLoadMore.title=Carregar mais...
+
+association.singleSip.title = One description item for all selected files or folders
+association.singleSip.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+association.sipSelection.title = One description item for each selected files or folders
+association.sipSelection.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+association.sipPerFile.title = One description item for each file under the selected folder(s)
+association.sipPerFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+association.sipPerFolder.title = One description item for each folder under the selected folder(s)
+association.sipPerFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.singleFile.title = Load from a single file
+metadata.singleFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.sameFolder.title = Load from the directory
+metadata.sameFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.diffFolder.title = Load from another directory
+metadata.diffFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
+metadata.template.title = Create new metadata from a template
+metadata.template.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+
 
 
