--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -4,7 +4,7 @@ cancel=Cancelar
 close=Fechar
 collapse=Ocultar
 confirm=Confirmar
-content=Conteï¿½do
+content=Conteúdo
 continue=Continuar
 directories=\ pastas
 directory=\ pasta
@@ -16,13 +16,13 @@ files=\ ficheiros
 ignore=Ignorar
 load=Carregar
 remove=Remover
-start=Comeï¿½ar
+start=Começar
 
 CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar SIPs
-CreationModalPreparation.outputDirectory=Pasta de saï¿½da
+CreationModalPreparation.outputDirectory=Pasta de saída
 CreationModalPreparation.sipFormat=Formato do SIP
-CreationModalProcessing.action=Aï¿½ï¿½o\:
+CreationModalProcessing.action=Ação\:
 CreationModalProcessing.currentSip=SIP atual\:
 CreationModalProcessing.errors=\ erros
 
@@ -32,39 +32,39 @@ FileExplorerPane.title=Explorador de ficheiros
 
 InspectionPane.flatten=Nivelar pasta
 InspectionPane.help.ruleList=Associe ficheiros/pastas \na um description object \npara criar uma regra
-InspectionPane.help.title=Escolha um item \ndo esquema de classificaï¿½ï¿½o\npara o inspecionar
+InspectionPane.help.title=Escolha um item \ndo esquema de classificação\npara o inspecionar
 InspectionPane.skip=Saltar pasta
 InspectionPane.metadata=Metadados
 InspectionPane.rules=Regras
 
-LoadingPane.createAssociation=Criar associaï¿½ï¿½o a
+LoadingPane.createAssociation=Criar associação a
 
 Main.edit=Editar
-Main.exportCS=Exportar esquema de classificaï¿½ï¿½o
+Main.exportCS=Exportar esquema de classificação
 Main.exportSips=Exportar SIPs
 Main.file=Ficheiro
 Main.hideFiles=Esconder ficheiros
 Main.hideIgnored=Esconder ignorados
 Main.hideMapped=Esconder mapeados
 Main.ignoreItems=Ignorar itens
-Main.loadCS=Carregar esquema de classificaï¿½ï¿½o
+Main.loadCS=Carregar esquema de classificação
 Main.openFolder=Abrir pasta
 Main.quit=Sair
 Main.showFiles=Mostrar ficheiros
 Main.showIgnored=Mostrar ignorados
 Main.showMapped=Mostrar mapeados
-Main.useJava8=A versï¿½o do Java ï¿½ %s. Use pelo menos \\"Java 1.8\\".
+Main.useJava8=A versão do Java é %s. Use pelo menos \\"Java 1.8\\".
 Main.view=Ver
 
 RuleCell.createdItem=Criado %d item
 
-RuleModalPane.associationMethod=Escolher o mï¿½todo de associaï¿½ï¿½o
+RuleModalPane.associationMethod=Escolher o método de associação
 RuleModalPane.chooseDirectory=Escolher pasta...
 RuleModalPane.chooseFile=Escolher ficheiro...
-RuleModalPane.maxDepth=Profundidade mï¿½xima
-RuleModalPane.metadataMethod=Escolher o mï¿½todo de metadados
-RuleModalProcessing.createdPreviews=Criado %d prï¿½-visualizaï¿½ï¿½es de SIP
-RuleModalProcessing.creatingPreviewa=A criar prï¿½-visualizaï¿½ï¿½es de SIP
+RuleModalPane.maxDepth=Profundidade máxima
+RuleModalPane.metadataMethod=Escolher o método de metadados
+RuleModalProcessing.createdPreviews=Criado %d pré-visualizações de SIP
+RuleModalProcessing.creatingPreviewa=A criar pré-visualizações de SIP
 RuleModalProcessing.processedDirsFiles=Processadas %d pastas e %d ficheiros
 RuleModalRemoving.removedFormat=Removidos %d SIPs (%d%%)
 RuleModalRemoving.title=A remover SIPs
@@ -72,11 +72,11 @@ RuleModalRemoving.title=A remover SIPs
 SchemaNode.items.format=%s  (%d itens)
 SchemaNode.items.formatSimple=\  (%d itens)
 
-SchemaPane.add=Adicionar nï¿½vel
-SchemaPane.help.title=Carregue o\nesquema de classificaï¿½ï¿½o
+SchemaPane.add=Adicionar nível
+SchemaPane.help.title=Carregue o\nesquema de classificação
 SchemaPane.newNode=Novo nodo
-SchemaPane.remove=Remover nï¿½vel
-SchemaPane.title=Esquema de classificaï¿½ï¿½o
+SchemaPane.remove=Remover nível
+SchemaPane.title=Esquema de classificação
 SchemaPane.create=crie
 SchemaPane.or=ou
 
