Testing and issue fixing

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -39,6 +39,7 @@ InspectionPane.rules=Rules
 
 LoadingPane.createAssociation=Create association to
 
+Main.createCS = Create classification scheme
 Main.edit=Edit
 Main.exportCS=Export classification scheme
 Main.exportSips=Export SIPs
