Added ETA to SIP exporting. Fixed enconding issue of language files.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -25,6 +25,9 @@ CreationModalPreparation.sipFormat=SIP format
 CreationModalProcessing.action=Action\:
 CreationModalProcessing.currentSip=Current SIP\:
 CreationModalProcessing.errors=\ errors
+CreationModalProcessing.hours=hours
+CreationModalProcessing.minutes=mins
+CreationModalProcessing.seconds=secs
 
 FileExplorerPane.chooseDir=Choose directory
 FileExplorerPane.help.title=Choose your\nworking directory
