--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -22,8 +22,8 @@ CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
 CreationModalPreparation.sipFormat=SIP format
-CreationModalProcessing.action=Action\:
-CreationModalProcessing.currentSip=Current SIP\:
+CreationModalProcessing.action=Action
+CreationModalProcessing.currentSip=Current SIP
 CreationModalProcessing.errors=\ errors
 CreationModalProcessing.hours=hours
 CreationModalProcessing.minutes=mins
