--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -22,8 +22,8 @@ CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar SIPs
 CreationModalPreparation.outputDirectory=Pasta de saída
 CreationModalPreparation.sipFormat=Formato do SIP
-CreationModalProcessing.action=Ação\:
-CreationModalProcessing.currentSip=SIP atual\:
+CreationModalProcessing.action=Ação
+CreationModalProcessing.currentSip=SIP atual
 CreationModalProcessing.errors=\ erros
 CreationModalProcessing.hours=horas
 CreationModalProcessing.minutes=mins
