UI and template fixes. Improved portuguese translation.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -19,11 +19,11 @@ remove=Remover
 start=Começar
 
 CreationModalPreparation.choose=Escolher...
-CreationModalPreparation.creatingSips=A criar SIPs
+CreationModalPreparation.creatingSips=A criar pacotes de submissão
 CreationModalPreparation.outputDirectory=Pasta de saída
-CreationModalPreparation.sipFormat=Formato do SIP
+CreationModalPreparation.sipFormat=Formato do pacote de submissão
 CreationModalProcessing.action=Ação
-CreationModalProcessing.currentSip=SIP atual
+CreationModalProcessing.currentSip=Pacote de submissão atual
 CreationModalProcessing.errors=\ erros
 CreationModalProcessing.hours=horas
 CreationModalProcessing.minutes=mins
@@ -34,24 +34,24 @@ FileExplorerPane.help.title=Escolha a sua\npasta de trabalho
 FileExplorerPane.title=Explorador de ficheiros
 
 InspectionPane.flatten=Nivelar pasta
-InspectionPane.help.ruleList=Associe ficheiros/pastas \na um description object \npara criar uma regra
-InspectionPane.help.title=Escolha um item \ndo esquema de classificação\npara o inspecionar
+InspectionPane.help.ruleList=Associe ficheiros/pastas \na um nível de descrição \npara criar uma regra
+InspectionPane.help.title=Escolha um item \ndo plano de classificação\npara o inspecionar
 InspectionPane.skip=Saltar pasta
 InspectionPane.metadata=Metadados
 InspectionPane.rules=Regras
 
 LoadingPane.createAssociation=Criar associação a
 
-Main.createCS = Criar esquema de classificação
+Main.createCS = Novo plano de classificação
 Main.edit=Editar
-Main.exportCS=Exportar esquema de classificação
-Main.exportSips=Exportar SIPs
+Main.exportCS=Exportar plano de classificação
+Main.exportSips=Exportar pacotes de submissão
 Main.file=Ficheiro
 Main.hideFiles=Esconder ficheiros
 Main.hideIgnored=Esconder ignorados
 Main.hideMapped=Esconder mapeados
 Main.ignoreItems=Ignorar itens
-Main.loadCS=Carregar esquema de classificação
+Main.loadCS=Carregar plano de classificação
 Main.openFolder=Abrir pasta
 Main.quit=Sair
 Main.showFiles=Mostrar ficheiros
@@ -67,55 +67,55 @@ RuleModalPane.chooseDirectory=Escolher pasta...
 RuleModalPane.chooseFile=Escolher ficheiro...
 RuleModalPane.maxDepth=Profundidade máxima
 RuleModalPane.metadataMethod=Escolher o método de metadados
-RuleModalProcessing.createdPreviews=Criado %d pré-visualizações de SIP
-RuleModalProcessing.creatingPreviewa=A criar pré-visualizações de SIP
-RuleModalProcessing.processedDirsFiles=Processadas %d pastas e %d ficheiros
-RuleModalRemoving.removedFormat=Removidos %d SIPs (%d%%)
-RuleModalRemoving.title=A remover SIPs
+RuleModalProcessing.createdPreviews=%d associações criadas
+RuleModalProcessing.creatingPreview=A criar associações
+RuleModalProcessing.processedDirsFiles=%d pastas e %d ficheiros processados
+RuleModalRemoving.removedFormat=%d (%d%%) pacotes de submissão removidos
+RuleModalRemoving.title=A remover pacotes de submissão
 
 SchemaNode.items.format=%s  (%d itens)
 SchemaNode.items.formatSimple=\  (%d itens)
 
-SchemaPane.add=Adicionar nível
-SchemaPane.help.title=Carregue o\nesquema de classificação
-SchemaPane.newNode=Novo nodo
-SchemaPane.remove=Remover nível
-SchemaPane.title=Esquema de classificação
-SchemaPane.create=crie
-SchemaPane.or=ou
+SchemaPane.add=Adicionar nível descritivo
+SchemaPane.help.title=Carregue o\nplano de classificação
+SchemaPane.newNode=Novo nível descritivo
+SchemaPane.remove=Remover nível descritivo
+SchemaPane.title=Plano de classificação
+SchemaPane.create=novo plano de classificação
+SchemaPane.or=ou crie um
 
-SimpleSipCreator.copyingData=A copiar os dados do SIP
-SimpleSipCreator.copyingMetadata=A copiar os metadados do SIP
-SimpleSipCreator.creatingStructure=A criar a estrutura de pastas do SIP
-SimpleSipCreator.finalizingSip=Finalizando o SIP
+SimpleSipCreator.copyingData=A copiar os dados do pacote de submissão
+SimpleSipCreator.copyingMetadata=A copiar os metadados do pacote de submissão
+SimpleSipCreator.creatingStructure=A criar a estrutura de pastas do pacote de submissão
+SimpleSipCreator.finalizingSip=Finalizando o pacote de submissão
 
 SourceTreeCell.remove=Remover ignorado
 SourceTreeLoading.title=A carregar...
 SourceTreeLoadMore.title=Carregar mais...
 
-association.singleSip.title = One description item for all selected files or folders
-association.singleSip.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.singleSip.title = Um item de descrição com todas as pastas e/ou ficheiros selecionados
+association.singleSip.description = Use esta opção para criar um e apenas um pacote de submissão contendo no seu interior todas as pastas e ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros será criado apenas um pacote de submissão correspondendo apenas a um item com um determinado nível de descrição.
 
-association.sipSelection.title = One description item for each selected files or folders
-association.sipSelection.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.sipSelection.title = Um item de descrição para cada uma das pastas e/ou ficheiros selecionados
+association.sipSelection.description = Use esta opção para criar um pacote de submissão para cada uma das pastas e/ou ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros, serão criados exatamente cinco pacotes de submissão, i.e. ccinco itens descritivos. Cada um destes itens pode corresponder a um nível de descrição distinto.
 
-association.sipPerFile.title = One description item for each file under the selected folder(s)
-association.sipPerFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.sipPerFile.title = Um item de descrição por cada ficheiro existente sob a(s) pasta(s) selecionada(s)
+association.sipPerFile.description = Use esta opção para criar um pacote de submissão por cada ficheiro que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de ficheiros que se encontram sob as pastas selecionadas.
 
-association.sipPerFolder.title = One description item for each folder under the selected folder(s)
-association.sipPerFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.sipPerFolder.title =  Um item de descrição por cada pasta existente sob a(s) pasta(s) selecionada(s)
+association.sipPerFolder.description = Use esta opção para criar um pacote de submissão por cada pasta que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de pastas que se encontram sob as pastas selecionadas até ao nível de pastas selecionado.  
 
-metadata.singleFile.title = Load from a single file
-metadata.singleFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.singleFile.title = Carregar a partir de um ficheiro
+metadata.singleFile.description = Use esta opção para adicionar a cada pacote de submissão um ficheiro de metadados à sua escolha. O ficheiro selecionado será adicionado a cada um dos pacotes de submissão gerados.
 
-metadata.sameFolder.title = Load from the directory
-metadata.sameFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.sameFolder.title = Carregar metadados a partir da própria pasta
+metadata.sameFolder.description = Use esta opção para incluir no pacote de submissão um ficheiro de metadados que se encontre na raiz da pasta que será usada para criar o pacote. O ficheiro de metadados deve possuir o padrão definido (e.g. metadata.*).
 
-metadata.diffFolder.title = Load from another directory
-metadata.diffFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.diffFolder.title = Carregar metadados a partir de uma pasta externa
+metadata.diffFolder.description = Use esta opção para selecionar uma pasta onde se encontram todos os ficheiros de metadados a incluir em cada pacote de submissão. A associação entre os ficheiros de metadados e os pacotes de submissão é feita através do nome do ficheiro (ignorando a extensão). Nos casos omissos, o pacote de submissão não irá conter metadados.
 
-metadata.template.title = Create new metadata from a template
-metadata.template.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.template.title = Criar metadados a partir de um modelo
+metadata.template.description = Use esta opção para criar metadados a partir do modelo definido na configuração. Os metadados associados a cada pacote de submissão serão todos iguais. Após a criação dos pacotes o utilizador deverá editar os metadados de acordo com os dados associados a cada pacote.
 
 
 
