"Same folder" metadata option now searches for metadata in each selected directory

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -97,7 +97,7 @@ association.singleSip.title = Um item de descrição com todas as pastas e/ou fi
 association.singleSip.description = Use esta opção para criar um e apenas um pacote de submissão contendo no seu interior todas as pastas e ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros será criado apenas um pacote de submissão correspondendo apenas a um item com um determinado nível de descrição.
 
 association.sipSelection.title = Um item de descrição para cada uma das pastas e/ou ficheiros selecionados
-association.sipSelection.description = Use esta opção para criar um pacote de submissão para cada uma das pastas e/ou ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros, serão criados exatamente cinco pacotes de submissão, i.e. ccinco itens descritivos. Cada um destes itens pode corresponder a um nível de descrição distinto.
+association.sipSelection.description = Use esta opção para criar um pacote de submissão para cada uma das pastas e/ou ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros, serão criados exatamente cinco pacotes de submissão, i.e. cinco itens descritivos. Cada um destes itens pode corresponder a um nível de descrição distinto.
 
 association.sipPerFile.title = Um item de descrição por cada ficheiro existente sob a(s) pasta(s) selecionada(s)
 association.sipPerFile.description = Use esta opção para criar um pacote de submissão por cada ficheiro que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de ficheiros que se encontram sob as pastas selecionadas.
