Added text field to make the "same folder" pattern configurable by the user

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -66,6 +66,7 @@ RuleModalPane.associationMethod=Choose the association method
 RuleModalPane.chooseDirectory=Choose Directory...
 RuleModalPane.chooseFile=Choose File...
 RuleModalPane.maxDepth=Max depth
+RuleModalPane.metadataPattern=Pattern
 RuleModalPane.metadataMethod=Choose the metadata method
 RuleModalProcessing.createdPreviews=Created %d SIP previews
 RuleModalProcessing.creatingPreview=Creating SIP previews
