--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -66,6 +66,7 @@ RuleModalPane.associationMethod=Escolher o método de associação
 RuleModalPane.chooseDirectory=Escolher pasta...
 RuleModalPane.chooseFile=Escolher ficheiro...
 RuleModalPane.maxDepth=Profundidade máxima
+RuleModalPane.metadataPattern=Padrão
 RuleModalPane.metadataMethod=Escolher o método de metadados
 RuleModalProcessing.createdPreviews=%d associações criadas
 RuleModalProcessing.creatingPreview=A criar associações
